--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,17 @@
 /*  your css code here. If applicable */
+.main{
+	background-color:#f5f5f5;
+	padding:30px
+}
+
+.content{
+	background-color:white;
+	padding:30px;
+	border:1px solid black;
+	margin:40px;
+}
+
+.author{
+	text-align:right;
+	font-style:italic;
+}
